@@ -7,6 +7,7 @@
   Closes feature request #57 (Ability to view OCR output and Image at same time)
 * Switched to GIMP-like controls - LMB for selecting and MMB for panning.
 * + crop to toolbar and RMB menus
+* Fix saving as TIFF G3/4 if image not depth 1
 
 
 2.3.0 (26.01.2019):
